Hide Charts in template

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,4 +1,4 @@
-<ion-view title="Revenues - {{accountId}}">
+<ion-view title="Reviews - {{accountId}}">
   <ion-content class="has-header padding">
   <ion-list>
     <!-- Header Row -->
@@ -50,6 +50,7 @@
    
     <button ng-click="addItem()" class="btn btn-default">Add</button>
 
+<!--
     <div class="row">
         <div class="col">
           <h4>2014 Revenues</h4>
@@ -59,6 +60,7 @@
             <h4>Revenue By Type</h4>
            <canvas donutchart legend=true options="data.chartOptions" data="data.chartData"></canvas>
         </div>     
-    </div>  
+    </div> 
+--> 
   </ion-content>
 </ion-view>
