--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,4 +1,4 @@
-<ion-view title="Reviews - {{accountId}}">
+<ion-view title="Reviews - {{accountId}}" hide-nav-bar>
   <ion-content class="has-header padding">
   <ion-list>
     <!-- Header Row -->
